--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ build = "build.rs"
 
 [dependencies]
 lazy_static = "1.0.0"
-error-chain = "0.10.0"
+failure = "0.1.1"
 debug-cell = "0.1.0"
 
 rand = "0.3.17"
