--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ bincode = "1.0.0"
 serde = "1.0.17"
 serde_derive = "1.0.17"
 
-glib = "0.5.0"
-glib-sys = "0.6.0"
+glib = { version = "0.5.0", features = ["v2_40"] }
+glib-sys = { version = "0.6.0", features = ["v2_40"] }
 gobject-sys = "0.6.0"
 gio = "0.4.0"
 gdk = "0.8.0"
