--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ failure = "0.1.1"
 debug-cell = "0.1.0"
 
 rand = "0.6.0"
-rust-crypto = "0.2.36"
+generic-array = "0.12.0"
+aes = "0.3.0"
+block-modes = "0.3.1"
 deflate = "0.7.17"
 inflate = "0.4.0"
 minidom = "0.10.0"
