--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,11 @@ toml = "0.4.5"
 bincode = "1.0.0"
 serde = { version = "1", features = ["derive"] }
 
-glib = { version = "0.6.0", features = ["v2_40"] }
-glib-sys = { version = "0.7.0", features = ["v2_40"] }
-gobject-sys = "0.7.0"
-gio = "0.5.0"
-gdk = "0.9.0"
+glib = { version = "0.7.0" }
+glib-sys = { version = "0.8.0" }
+gobject-sys = "0.8.0"
+gio = "0.6.0"
+gdk = "0.10.0"
 libc = "*"
-gtk = { version = "0.5.0", features = ["v3_22"] }
-gtk-sys = "0.7.0"
+gtk = { version = "0.6.0", features = ["v3_22"] }
+gtk-sys = "0.8.0"
