install deps into tarpaulin docker container

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,6 @@ script:
 after_success:
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      docker run --security-opt seccomp=unconfined -v "$PWD:/volume" xd009642/tarpaulin:latest sh -c "cargo tarpaulin -f -t 5 --out Xml"
+      docker run --security-opt seccomp=unconfined -v "$PWD:/volume" xd009642/tarpaulin:latest sh -c "apt-get update && apt-get install -y libgtk-3-dev && cargo tarpaulin -f -t 5 --out Xml -v"
       bash <(curl -s https://codecov.io/bash)
     fi
