--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,29 @@
-language: rust
-cache: cargo
-sudo: required
-dist: xenial
-services:
-  - xvfb
-
-rust:
-  - stable
-
-os:
-  - linux
-  - osx
-
-addons:
-  apt:
-    sources:
-      - sourceline: 'ppa:jonathonf/gtk3.22'
-    packages:
-      - libssl-dev
-      - libgtk-3-dev
-      - openbox
-  homebrew:
-    packages:
-      - gtk+3
-
 env:
   global:
     - RUST_BACKTRACE=1
 
-before_script:
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      openbox &
-    fi
+matrix:
+  include:
+    - os: osx
+      addons:
+        homebrew:
+          packages:
+            - gtk+3
+      language: rust
+      cache: cargo
+      rust: stable
+      script:
+        - cargo build --verbose
+        - make test
+    - os: linux
+      sudo: required
+      services:
+        - docker
+      script:
+        - docker run -d --name rust-gtk-container -v `pwd`:/volume --security-opt seccomp=unconfined andy128k/rust-gtk:latest
+        - docker exec -it rust-gtk-container cargo build
+        - docker exec -it rust-gtk-container make test
+        - docker exec -it rust-gtk-container make coverage
+        - bash <(curl -s https://codecov.io/bash)
 
 script:
-  - cargo build --verbose
-  - cargo test --no-fail-fast -- --nocapture --test-threads 1
-
-after_success:
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      docker run --security-opt seccomp=unconfined -v "$PWD:/volume" xd009642/tarpaulin:latest sh -c "cargo tarpaulin -f -t 5 --out Xml"
-      bash <(curl -s https://codecov.io/bash)
-    fi
