--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.17.2"
 authors = ["Andrey Kutejko <andy128k@gmail.com>"]
 build = "build.rs"
 edition = "2018"
+license = "LGPL-3.0-or-later"
+description = "Password storing program"
+readme = "README.md"
 
 [dependencies]
 lazy_static = "1.0.0"
@@ -28,3 +31,15 @@ gdk = "0.10.0"
 libc = "*"
 gtk = { version = "0.6.0", features = ["v3_22"] }
 gtk-sys = "0.8.0"
+
+[package.metadata.deb]
+extended-description = "Password storing program"
+depends = "libgtk-3-0 (>= 3.22), shared-mime-info"
+conflicts = "revelation"
+assets = [
+    ["target/release/password-storage",               "/usr/bin/",                                    "755"],
+    ["icons/app-icon/password-storage.svg",           "/usr/share/pixmaps/",                          "644"],
+    ["unix-desktop/password-storage.desktop",         "/usr/share/applications/",                     "644"],
+    ["unix-desktop/revelation.xml",                   "/usr/share/mime/packages/",                    "644"],
+    ["icons/mimetypes/application-x-revelation.svg",  "/usr/share/icons/hicolor/scalable/mimetypes/", "644"],
+]
