--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,18 +8,20 @@ environment:
       target: x86_64-pc-windows-gnu
 
 install:
-  - set PATH=%PATH%;C:\msys64\usr\bin;C:\msys64\mingw64\bin;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin
+  - set PATH=C:\msys64\usr\bin;C:\msys64\mingw64\bin;%PATH%
   - set PKG_CONFIG_PATH=%PKG_CONFIG_PATH%;C:\msys64\usr\lib\pkgconfig;C:\msys64\mingw64\lib\pkgconfig
   - set LIBRARY_PATH=%LIBRARY_PATH%;C:\msys64\usr\lib;C:\msys64\mingw64\lib
+  - pacman --noconfirm -Syu
   - pacman --noconfirm -S mingw-w64-x86_64-gtk3
   - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - rustup-init -yv --default-toolchain %channel% --default-host %target%
-  - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
+  - set PATH=%USERPROFILE%\.cargo\bin;%PATH%
   - rustc -vV
   - cargo -vV
 
 build: false
 
 test_script:
+  - set RUST_BACKTRACE=1
   - cargo build --verbose
   - cargo test --no-fail-fast -- --nocapture --test-threads 1
