--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ libc = "*"
 gtk = { version = "0.6.0", features = ["v3_22"] }
 gtk-sys = "0.8.0"
 
+[target.'cfg(target_os = "windows")'.build-dependencies]
+embed-resource = "1.2.0"
+
 [package.metadata.deb]
 extended-description = "Password storing program"
 depends = "libgtk-3-0 (>= 3.22), shared-mime-info"
