--- a/macos/Info.plist
+++ b/macos/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>PasswordStorage</string>
 	<key>CFBundleGetInfoString</key>
-	<string>0.17</string>
+	<string>{VERSION}</string>
 	<key>CFBundleIconFile</key>
 	<string>PassStorage.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -17,13 +17,13 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.17</string>
+	<string>{VERSION}</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>CFBundleVersion</key>
-	<string>0.17</string>
+	<string>{VERSION}</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright 2018 Andrey Kutejko, GNU Lesser General Public License.</string>
 	<key>LSMinimumSystemVersion</key>
