--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ libc = "*"
 gtk = { version = "0.6.0", features = ["v3_22"] }
 gtk-sys = "0.8.0"
 
+backtrace = "0.3.26"
+
 [target.'cfg(target_os = "windows")'.build-dependencies]
 embed-resource = "1.2.0"
 
