--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ lazy_static = "1.0.0"
 failure = "0.1.1"
 debug-cell = "0.1.0"
 
-rand = "0.6.0"
+rand = "0.7.0"
 generic-array = "0.12.0"
 aes = "0.3.0"
 block-modes = "0.3.1"
@@ -25,12 +25,12 @@ toml = "0.5"
 bincode = "1.0.0"
 serde = { version = "1", features = ["derive"] }
 
-glib = { version = "0.7.0" }
-gio = "0.6.0"
-gdk = "0.10.0"
 libc = "*"
-gtk = { version = "0.6.0", features = ["v3_22"] }
-gtk-sys = "0.8.0"
+glib = "0.8.0"
+gio = "0.7.0"
+gdk = "0.11.0"
+gtk = { version = "0.7.0", features = ["v3_22"] }
+gtk-sys = "0.9.0"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 embed-resource = "1.2.0"
