--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,14 +8,12 @@ environment:
       target: x86_64-pc-windows-gnu
 
 install:
-  - set PATH=C:\msys64\usr\bin;C:\msys64\mingw64\bin;%PATH%
-  - set PKG_CONFIG_PATH=%PKG_CONFIG_PATH%;C:\msys64\usr\lib\pkgconfig;C:\msys64\mingw64\lib\pkgconfig
-  - set LIBRARY_PATH=%LIBRARY_PATH%;C:\msys64\usr\lib;C:\msys64\mingw64\lib
+  - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
+  - set PATH=C:\msys64\usr\bin
   - pacman --noconfirm -Syu
   - pacman --noconfirm -S mingw-w64-x86_64-gtk3
-  - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - rustup-init -yv --default-toolchain %channel% --default-host %target%
-  - set PATH=%USERPROFILE%\.cargo\bin;%PATH%
+  - set PATH=%USERPROFILE%\.cargo\bin;C:\msys64\mingw64\bin
   - rustc -vV
   - cargo -vV
 
