--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,48 +1,4 @@
-[package]
-name = "password-storage"
-version = "0.17.3"
-authors = ["Andrey Kutejko <andy128k@gmail.com>"]
-build = "build.rs"
-edition = "2018"
-license = "LGPL-3.0-or-later"
-description = "Password storing program"
-readme = "README.md"
-
-[dependencies]
-lazy_static = "1.0.0"
-failure = "0.1.1"
-debug-cell = "0.1.0"
-
-rand = "0.7.0"
-generic-array = "0.12.0"
-aes = "0.3.0"
-block-modes = "0.3.1"
-deflate = "0.7.17"
-inflate = "0.4.0"
-minidom = "0.11.0"
-
-toml = "0.5"
-bincode = "1.0.0"
-serde = { version = "1", features = ["derive"] }
-
-libc = "*"
-glib = "0.8.0"
-gio = "0.7.0"
-gdk = "0.11.0"
-gtk = { version = "0.7.0", features = ["v3_22"] }
-gtk-sys = "0.9.0"
-
-[target.'cfg(target_os = "windows")'.build-dependencies]
-embed-resource = "1.2.0"
-
-[package.metadata.deb]
-extended-description = "Password storing program"
-depends = "libgtk-3-0 (>= 3.22), shared-mime-info"
-conflicts = "revelation"
-assets = [
-    ["target/release/password-storage",               "/usr/bin/",                                    "755"],
-    ["icons/app-icon/password-storage.svg",           "/usr/share/pixmaps/",                          "644"],
-    ["unix-desktop/password-storage.desktop",         "/usr/share/applications/",                     "644"],
-    ["unix-desktop/revelation.xml",                   "/usr/share/mime/packages/",                    "644"],
-    ["icons/mimetypes/application-x-revelation.svg",  "/usr/share/icons/hicolor/scalable/mimetypes/", "644"],
+[workspace]
+members = [
+    "password-storage",
 ]
