--- a/.github/workflows/release_macos.yml
+++ b/.github/workflows/release_macos.yml
@@ -21,10 +21,11 @@ jobs:
       run: cargo test --verbose -- --nocapture --test-threads 1
     - name: Make dmg
       id: make-dmg
-      run: VERSION=${{ github.event.release.tag_name }} make osx_app
-      run: mv target/dmg/PasswordStorage.dmg target/dmg/PasswordStorage-${{ github.event.release.tag_name }}.dmg
-      run: echo ::set-output name=dmg-path::$(ls target/dmg/PasswordStorage*.dmg)
-      run: echo ::set-output name=dmg-name::$(basename target/dmg/PasswordStorage*.dmg)
+      run: |
+        VERSION=${{ github.event.release.tag_name }} make osx_app
+        mv target/dmg/PasswordStorage.dmg target/dmg/PasswordStorage-${{ github.event.release.tag_name }}.dmg
+        echo ::set-output name=dmg-path::$(ls target/dmg/PasswordStorage*.dmg)
+        echo ::set-output name=dmg-name::$(basename target/dmg/PasswordStorage*.dmg)
     - uses: actions/upload-release-asset@v1
       env:
         GITHUB_USER: ${{ secrets.GITHUB_USER }}
