--- a/.github/workflows/release_linux.yml
+++ b/.github/workflows/release_linux.yml
@@ -13,6 +13,10 @@ jobs:
       with:
         toolchain: stable
         override: true
+    - uses: actions-rs/install@v0.1
+      with:
+        crate: cargo-deb
+        # use-tool-cache: true
     - name: Install dependencies
       run: sudo apt-get install -y --no-install-recommends libgtk-3-dev xvfb
     - name: Build
