--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -17,3 +17,5 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: xvfb-run cargo test --verbose -- --nocapture --test-threads 1
+      env:
+        RUST_BACKTRACE: 1
