--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -15,13 +15,18 @@ jobs:
         default: true
         override: true
     - name: Set PATH
-      run: echo "##[add-path]C:\msys64\usr\bin;C:\msys64\mingw64\bin"
+      shell: bash
+      run: |
+        echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
+        echo "C:\msys64\usr\bin" >> $GITHUB_PATH
     - name: Install dependencies
       run: pacman --noconfirm -S mingw-w64-x86_64-gtk3
     - name: Set PKG_CONFIG_PATH
-      run: echo "##[set-env name=PKG_CONFIG_PATH]/mingw64/lib/pkgconfig"
+      shell: bash
+      run: echo "PKG_CONFIG_PATH=/mingw64/lib/pkgconfig" >> $GITHUB_ENV
     - name: Set RUSTFLAGS
-      run: echo "##[set-env name=RUSTFLAGS]-L C:\msys64\mingw64\lib"
+      shell: bash
+      run: echo "RUSTFLAGS=-L C:\msys64\mingw64\lib" >> $GITHUB_ENV
     - name: Build
       run: cargo build --verbose
     - name: Run tests
