--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ aes = "0.6"
 block-modes = "0.7"
 deflate = "0.9"
 inflate = "0.4"
-minidom = "0.12"
+quick-xml = "0.20"
 
 toml = "0.5"
 serde = { version = "1", features = ["derive"] }
