--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ readme = "README.md"
 [dependencies]
 lazy_static = "1"
 once_cell = "1"
+guard = "0.5"
+futures = "0.3"
 
 rand = "0.8"
 aes = "0.7"
