--- a/.github/workflows/release_macos.yml
+++ b/.github/workflows/release_macos.yml
@@ -15,7 +15,7 @@ jobs:
         override: true
     - uses: actions/setup-node@v1
     - name: Install dependencies
-      run: brew install pkg-config gtk+3 librsvg
+      run: brew install pkg-config gtk4 librsvg
     - name: Make dmg
       id: make-dmg
       run: |
