--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -6,14 +6,17 @@ jobs:
   clippy:
     runs-on: ubuntu-latest
     steps:
+      - name: Install dependencies
+        run: |
+          export DEBIAN_FRONTEND=noninteractive
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends libgtk-3-dev
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           components: clippy
           override: true
-      - name: Install dependencies
-        run: sudo apt-get install -y --no-install-recommends libgtk-3-dev
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
