--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -10,7 +10,7 @@ jobs:
         run: |
           export DEBIAN_FRONTEND=noninteractive
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends libgtk-3-dev
+          sudo apt-get install -y --no-install-recommends libgtk-3-dev xvfb
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
