--- a/.github/workflows/release_linux.yml
+++ b/.github/workflows/release_linux.yml
@@ -8,6 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Install dependencies
+        run: |
+          export DEBIAN_FRONTEND=noninteractive
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends libgtk-3-dev
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -17,8 +22,6 @@ jobs:
         with:
           crate: cargo-deb
           # use-tool-cache: true
-      - name: Install dependencies
-        run: sudo apt-get install -y --no-install-recommends libgtk-3-dev xvfb
       - name: Make deb
         id: make-deb
         run: |
