--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -23,9 +23,10 @@ jobs:
       - uses: actions-rs/install@v0.1
         with:
           crate: cargo-tarpaulin
+          version: 0.18.0
           use-tool-cache: true
       - name: Run coverage
-        run: xvfb-run cargo tarpaulin -f -t 5 --out Xml -v -- --test-threads=1
+        run: xvfb-run cargo tarpaulin --forward --timeout 5 --out Xml --verbose -- --nocapture --test-threads=1
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
