wip: create windows release action

--- a/.github/workflows/release_windows.yml
+++ b/.github/workflows/release_windows.yml
@@ -30,11 +30,20 @@ jobs:
         run: echo "RUSTFLAGS=-L C:\msys64\mingw64\lib" >> $GITHUB_ENV
       - name: Build
         run: cargo build --verbose --release
-      - name: Package
-        id: package
+
+      - name: Prepare package
         run: |
-          echo VERSION=${{ github.event.release.tag_name }}
-          copy .\target\release\password-storage.exe .\target\release\password-storage-${{ github.event.release.tag_name }}.exe
+          copy .\\target\\release\\password-storage.exe .\\target\\release\\password-storage-${{ github.event.release.tag_name }}.exe
+
+          mkdir win
+          copy .\\target\\release\\password-storage.exe win
+      - name: Build package
+        run: |
+          "C:\\Program Files (x86)\\Inno Setup 6\\ISCC.exe" "/DVersion=${{ github.event.release.tag_name }}" ".\\windows\\setup.iss"
+        shell: cmd
+
       - uses: softprops/action-gh-release@v1
         with:
-          files: .\target\release\password-storage-*.exe
+          files: |
+            .\target\release\password-storage-*.exe
+            .\PasswordStorage-*.*
