--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ futures = "0.3"
 os_str_bytes = "6"
 
 rand = "0.8"
-aes = "0.7"
-block-modes = "0.8"
+aes = "0.8"
+cbc = "0.1"
 deflate = "1"
 inflate = "0.4"
 quick-xml = "0.22"
