--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ awesome-glib = { git = "https://github.com/andy128k/awesome-gtk.git" }
 [target.'cfg(target_os = "windows")'.build-dependencies]
 embed-resource = "1"
 
+[profile.release]
+strip = true
+
 [package.metadata.deb]
 extended-description = "Password storing program"
 depends = "libgtk-3-0 (>= 3.22), shared-mime-info"
