--- a/.github/workflows/release_windows.yml
+++ b/.github/workflows/release_windows.yml
@@ -21,7 +21,7 @@ jobs:
           echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
           echo "C:\msys64\usr\bin" >> $GITHUB_PATH
       - name: Install dependencies
-        run: pacman --noconfirm -S mingw-w64-x86_64-gtk3
+        run: pacman --noconfirm -S mingw-w64-x86_64-gtk3 mingw-w64-x86_64-pkg-config
       - name: Set PKG_CONFIG_PATH
         shell: bash
         run: echo "PKG_CONFIG_PATH=/mingw64/lib/pkgconfig" >> $GITHUB_ENV
