--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ gtk = { version = "0.15", features = ["v3_22"] }
 awesome-glib = { git = "https://github.com/andy128k/awesome-gtk.git" }
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
-embed-resource = "1"
+winres = "0.1"
 
 [profile.release]
 strip = true
