--- a/.github/disabled-workflows/coverage.yml
+++ b/.github/disabled-workflows/coverage.yml
@@ -15,7 +15,7 @@ jobs:
           export DEBIAN_FRONTEND=noninteractive
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends libgtk-3-dev xvfb
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
@@ -28,7 +28,7 @@ jobs:
       - name: Run coverage
         run: xvfb-run cargo tarpaulin --forward --timeout 5 --out Xml --verbose -- --nocapture --test-threads=1
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./cobertura.xml
+          files: ./cobertura.xml
