--- a/.github/workflows/release_macos.yml
+++ b/.github/workflows/release_macos.yml
@@ -8,12 +8,14 @@ jobs:
   build:
     runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
+        with:
+          node-version: latest
       - name: Install dependencies
         run: brew install pkg-config gtk+3 librsvg
       - name: Make dmg
