--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -7,25 +7,22 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: C:\msys64\usr\bin\pacman --noconfirm -S mingw-w64-x86_64-gtk4 mingw-w64-x86_64-pkgconf mingw-w64-x86_64-gcc
+      - name: Set PATH
+        shell: bash
+        run: |
+          echo "C:\msys64\mingw64\include" >> $GITHUB_PATH
+          echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
+          echo "C:\msys64\mingw64\lib" >> $GITHUB_PATH
+
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable-gnu
           default: true
           override: true
-      - name: Set PATH
-        shell: bash
-        run: |
-          echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
-          echo "C:\msys64\usr\bin" >> $GITHUB_PATH
-      - name: Install dependencies
-        run: pacman --noconfirm -S mingw-w64-x86_64-gtk3 mingw-w64-x86_64-pkg-config
-      - name: Set PKG_CONFIG_PATH
-        shell: bash
-        run: echo "PKG_CONFIG_PATH=/mingw64/lib/pkgconfig" >> $GITHUB_ENV
-      - name: Set RUSTFLAGS
-        shell: bash
-        run: echo "RUSTFLAGS=-L C:\msys64\mingw64\lib" >> $GITHUB_ENV
+
+      - uses: actions/checkout@v3
       - name: Build
         run: cargo build --verbose
       - name: Run tests
