--- a/.github/workflows/release_linux.yml
+++ b/.github/workflows/release_linux.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           export DEBIAN_FRONTEND=noninteractive
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends libgtk-3-dev
+          sudo apt-get install -y --no-install-recommends build-essential curl ca-certificates libssl-dev libgtk-4-dev xvfb
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
