--- a/.github/workflows/release_macos.yml
+++ b/.github/workflows/release_macos.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: latest
       - name: Install dependencies
-        run: brew install pkg-config gtk+3 librsvg
+        run: brew install pkg-config gtk4 librsvg
       - name: Make dmg
         id: make-dmg
         run: |
