--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ quick-xml = "0.27"
 toml = "0.5"
 serde = { version = "1", features = ["derive"] }
 
-gtk = "0.16"
+gtk4 = "0.5"
 awesome-glib = { git = "https://github.com/andy128k/awesome-gtk.git" }
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
