--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -16,11 +16,9 @@ jobs:
           echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
           echo "C:\msys64\mingw64\lib" >> $GITHUB_PATH
 
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable-gnu
-          default: true
-          override: true
+          toolchain: stable-x86_64-pc-windows-gnu
 
       - uses: actions/checkout@v3
       - name: Build
