--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -12,9 +12,5 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends build-essential curl ca-certificates libssl-dev libgtk-4-dev xvfb
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          components: clippy
-          override: true
+      - uses: dtolnay/rust-toolchain@stable
       - run: cargo clippy --all-targets --all-features
