--- a/.github/workflows/release_macos.yml
+++ b/.github/workflows/release_macos.yml
@@ -9,10 +9,7 @@ jobs:
     runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
+      - uses: dtolnay/rust-toolchain@stable
       - uses: actions/setup-node@v3
         with:
           node-version: latest
