--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,10 +1,9 @@
 name: Coverage
 
-on:
-  pull_request:
+"on":
   push:
-    branches:
-      - master
+  pull_request:
+    types: [opened, reopened]
 
 jobs:
   coverage:
