--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Run tests
-        run: xvfb-run cargo test --verbose -- --nocapture --test-threads 1
+        run: xvfb-run cargo test --verbose -- --nocapture
         env:
           RUST_BACKTRACE: 1
