--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Run tests
-        run: cargo test --verbose -- --nocapture --test-threads 1
+        run: cargo test --verbose -- --nocapture
         env:
           RUST_BACKTRACE: 1
