--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ quick-xml = "0.27"
 toml = "0.5"
 serde = { version = "1", features = ["derive"] }
 
-gtk4 = "0.6"
+gtk = { package = "gtk4", version = "0.6" }
 awesome-glib = { git = "https://github.com/andy128k/awesome-gtk.git" }
 
 [build-dependencies]
