--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ toml = "0.5"
 serde = { version = "1", features = ["derive"] }
 
 gtk = { package = "gtk4", version = "0.6" }
-awesome-glib = { git = "https://github.com/andy128k/awesome-gtk.git" }
+awesome-glib = "0.2"
 
 [build-dependencies]
 glib-build-tools = "0.17"
