Replace yarn by npm

--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -16,9 +16,9 @@ jobs:
         with:
           node-version: latest
 
-      - run: yarn
+      - run: npm ci
         working-directory: ./site
-      - run: yarn build
+      - run: npm run build
         working-directory: ./site
 
       - name: Upload
