Revert "Replace embed-resource with winres" and update dependencies
This reverts commit b4dfa537398a9d1a49d60e2ba4b2181d081cfd4c.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ awesome-gtk = "0.3"
 glib-build-tools = "0.18"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
-winres = "0.1"
+embed-resource = "2"
 
 [profile.release]
 strip = true
