--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -8,12 +8,17 @@ name: Code check
 jobs:
   clippy:
     runs-on: ubuntu-latest
+    container:
+      image: debian:testing
     steps:
       - name: Install dependencies
         run: |
           export DEBIAN_FRONTEND=noninteractive
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends build-essential curl ca-certificates libssl-dev libgtk-4-dev xvfb
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
+          apt-get update
+          apt-get install -y --no-install-recommends build-essential curl ca-certificates libssl-dev libgtk-4-dev xvfb xauth
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          components: clippy
       - run: cargo clippy --all-targets --all-features
