--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -15,12 +15,12 @@ jobs:
         run: |
           export DEBIAN_FRONTEND=noninteractive
           apt-get update
-          apt-get install -y --no-install-recommends build-essential curl ca-certificates libssl-dev libgtk-4-dev xvfb xauth
+          apt-get install -y --no-install-recommends build-essential curl ca-certificates libssl-dev libgtk-4-dev xwayland-run
       - uses: actions/checkout@v6
       - uses: dtolnay/rust-toolchain@stable
       - name: Build
         run: cargo build --verbose
       - name: Run tests
-        run: xvfb-run cargo test --verbose -- --nocapture
+        run: wlheadless-run -- cargo test --verbose -- --nocapture
         env:
           RUST_BACKTRACE: 1
